.metadata/.plugins/org.eclipse.cdt.ui/hello1.build.log
07:57:35 **** Incremental Build of configuration Debug for project hello1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\hello1.o" "..\\src\\hello1.c" 
..\src\hello1.c: In function 'main':
..\src\hello1.c:16:9: warning: passing argument 1 of 'setbuf' from incompatible pointer type [-Wincompatible-pointer-types]
  setbuf("stdout,NULL");
         ^~~~~~~~~~~~~
In file included from ..\src\hello1.c:11:
C:/Program Files/mingw-w64/x86_64-8.1.0-posix-seh-rt_v6-rev0/mingw64/x86_64-w64-mingw32/include/stdio.h:685:43: note: expected 'FILE * restrict' {aka 'struct _iobuf * restrict'} but argument is of type 'char *'
   void __cdecl setbuf(FILE * __restrict__ _File,char * __restrict__ _Buffer) __MINGW_ATTRIB_DEPRECATED_SEC_WARN;
                       ~~~~~~~~~~~~~~~~~~~~^~~~~
..\src\hello1.c:16:2: error: too few arguments to function 'setbuf'
  setbuf("stdout,NULL");
  ^~~~~~
In file included from ..\src\hello1.c:11:
C:/Program Files/mingw-w64/x86_64-8.1.0-posix-seh-rt_v6-rev0/mingw64/x86_64-w64-mingw32/include/stdio.h:685:16: note: declared here
   void __cdecl setbuf(FILE * __restrict__ _File,char * __restrict__ _Buffer) __MINGW_ATTRIB_DEPRECATED_SEC_WARN;
                ^~~~~~
..\src\hello1.c:18:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
  scanf("%d",a);
         ~^  ~
..\src\hello1.c:18:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]

07:57:35 Build Failed. 1 errors, 3 warnings. (took 176ms)

